# velora

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  run_benchmarks.py  test_router.py
.github/workflows/: build.yml
agent/: main.py  solvers.py
app/: __init__.py  config.py  local_model.py  main.py  quality.py  remote.py  router.py  solvers.py
app/clients/: __init__.py  base_client.py  fireworks_client.py  local_client.py  remote_client.py
app/core/: constants.py  logger.py
app/models/: __init__.py
app/prompts/: code_debug.txt  code_gen.txt  factual.txt  logic_reasoning.txt  math_reasoning.txt  ner.txt  sentiment.txt  summarize.txt
app/router/: README.md  __init__.py  confidence_estimator.py  decision_engine.py  embedding_service.py  feature_extractor.py  history_store.py  lmstudio_invoker.py  performance_memory.py  router_metrics.py  routing_policy.py  schemas.py
app/schemas/: __init__.py  chat.py  result.py  task.py
app/services/: __init__.py  agent.py  classifier.py  gate.py  gazetteer.py  pyexec.py  router.py  self_check.py  solvers.py
app/utils/: __init__.py  compression.py  io.py  timer.py
benchmarks/: README.md  agent_cache.json  agent_rollout.py  conftest.py  jit_live_benchmark.py  requirements.txt  routing_benchmark.py  run_benchmark.py
benchmarks/datasets/: 01_factual.jsonl  02_math.jsonl  03_sentiment.jsonl  (+9 more)
cache/: evals.py  llm_evaluator.py  model_costs.json  requirements.txt  test.py  vis.py  wrapper.py
docs/: benchmarks_guide.md  docker_guide.md
input/: tasks.json
tests/: test_config.py  test_pipeline.py
(+14 files in other folders)
