[project]
name = "velora"
version = "0.1.0"
description = "Zero-token local-first AI agent (AMD Hackathon Track 1)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "node_modules",
    "benchmarks",
    # Vendored, proven engine ported from project/ (ZeroFire). Kept out of the
    # strict lint config so the faithful port isn't reformatted; logic changes
    # made during the local-context optimization pass are linted manually.
    "app",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py"]
